# Neurasync

./: .replit  README.md  package-lock.json  package.json  pyproject.toml  run_neurasync.sh  run_streamlit.sh  start_emotion_detection.sh  streamlit_app.py  theme.json
.github/workflows/: deploy.yml
.streamlit/: config.toml
attached_assets/: Pasted--Core-Design-Principles-Apple-Inspired-Minimalist-UI-Clean-whitespace-heavy-design-with-sof-1742232789725.txt  Pasted-import-streamlit-as-st-import-google-generativeai-as-genai-import-os-from-datetime-import-datetim-1742210983590.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/analysis/: AnalysisModal.tsx
client/src/components/dashboard/: CurrentStressLevel.tsx  StressOverview.tsx
client/src/components/layout/: Sidebar.tsx
client/src/components/music/: MusicRecommendations.tsx
client/src/components/therapy/: AIChatbot.tsx
client/src/components/ui/: sidebar.tsx  toggle.tsx
client/src/lib/: emotionDetection.ts  openai.ts  queryClient.ts  themeUtils.ts
client/src/pages/: Analysis.tsx  Dashboard.tsx  Music.tsx  Settings.tsx  Therapy.tsx
client/src/types/: index.ts
docs/: README.md  _config.yml
server/: index.ts  routes.ts  storage.ts
server/api/: gemini.ts  openai.ts  vertexai.ts
shared/: schema.ts
