[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.4",
    "numpy>=2.2.4",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "streamlit>=1.43.2",
]
